--- a/gateway_board.ioc
+++ b/gateway_board.ioc
@@ -84,6 +84,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
+NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA11.Locked=true
 PA11.Mode=Device
